--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,13 +46,22 @@ div.title p {
   width: 70%;
 }
 
+nav {
+  padding: 20px 0;
+}
+
 nav div.barra {
-  background: linear-gradient(to bottom, #355c7d, #6c5b7b, #c06c84);
+  background-color: #2d3e50;
   height: 40px;
 }
 
+nav div.barra div {
+  display: flex;
+  justify-content: flex-end;
+}
+
 nav div.barra div img {
-  width: 35px;
+  height: 70%;
 }
 
 nav div.menu {
@@ -62,7 +71,7 @@ nav div.menu {
 }
 
 nav div.menu img {
-  width: 300px;
+  width: 260px;
 }
 
 nav div.menu ul {
@@ -111,7 +120,7 @@ ul.slick-dots {
 }
 
 section.info {
-  background: #1a1141;
+  background: #2d3e50;
 }
 
 section.info div {
