--- a/assets/css/nav.scss
+++ b/assets/css/nav.scss
@@ -1,26 +1,31 @@
 //  NAV 
 nav {
+    
     div.barra {
-        background: linear-gradient(to bottom, #355c7d, #6c5b7b, #c06c84);
+        background-color: #2d3e50;
        // background: linear-gradient(to top, #c04848, #480048);
        //background: linear-gradient(to bottom, #f0c27b, #4b1248);
        // background: linear-gradient(to top, #f0c27b, #4b1248);
         // background-color: #364061;
         height: 40px;
         div {
+            display: flex;
+            justify-content: flex-end;
             img  {
-                width: 35px;
+                
+                height: 70%;
             }
         }
-    }
+     }
 
     div.menu {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        padding: 20px 0;
 
         img {
-            width: 300px;
+            width: 260px;
         }
 
         ul {
