--- a/assets/css/section-info.css
+++ b/assets/css/section-info.css
@@ -1,17 +1,18 @@
 section.info {
+  margin-top: 5%;
   background: #2d3e50;
+  color: #ffffff;
 }
 
-section.info div {
-  width: 80%;
-  text-align: center;
-  padding: 30px 0;
-  margin: 0 auto;
+section.info div img {
+  margin-top: -30px;
 }
 
 section.info div div.cards {
+  width: 80%;
   padding: 30px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  margin: 0 auto;
 }
 /*# sourceMappingURL=section-info.css.map */
