--- a/assets/css/section-info.scss
+++ b/assets/css/section-info.scss
@@ -1,17 +1,24 @@
 section.info {
+    margin-top: 5%;
     background:#2d3e50;
+    color: #ffffff;
 
     div {
-        width: 80%;
-        text-align: center;
-        padding: 30px 0;
-        margin: 0 auto;
+        // width: 80%;
+        // text-align: center;
+        // padding: 30px 0;
+        // margin: 0 auto;
 
+        img {
+            margin-top: -30px;
+        }
 
         div.cards {
+            width: 80%;
             padding: 30px;
             display: flex;
-            justify-content: space-around;
+            justify-content: center;
+            margin: 0 auto;
         }
     }
 }
