--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,11 +13,21 @@ ul li {
 
 a {
   text-decoration: none;
+  color: #364061;
 }
 
 p, h1, h2, h3, h4 {
   margin: 0;
   text-align: center;
+}
+
+h1, h2, h3, h4 {
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 700i;
+}
+
+p {
+  font-weight: 400;
 }
 
 div.title {
@@ -116,22 +126,49 @@ ul.slick-dots {
   margin-bottom: 0px;
 }
 
-section.info {
+section.missao {
   margin-top: 5%;
   background: #2d3e50;
   color: #ffffff;
 }
 
-section.info div img {
+section.missao div.barra img {
   margin-top: -30px;
 }
 
-section.info div div.cards {
+section.missao h2 {
+  padding: 50px 0;
+}
+
+section.missao div.call-to-action {
+  margin: 0 auto;
+  padding-bottom: 50px;
+  width: 60%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+section.missao div.call-to-action div.title {
+  width: 40%;
+  background: #273a4e;
+  border-radius: 10px;
+}
+
+section.missao div.call-to-action div.title div.cards {
   width: 80%;
-  padding: 30px;
+  padding: 10px;
   display: flex;
   justify-content: center;
   margin: 0 auto;
+}
+
+section.missao div.call-to-action div.title div.cards img {
+  width: 120px;
+}
+
+section.missao div.call-to-action div.title div.cards img.acess {
+  border-radius: 100%;
 }
 
 section.carreiras {
@@ -181,11 +218,21 @@ section.carreiras div div.cards div p {
 }
 
 footer div {
-  background-color: gray;
+  background-color: #2d3e50;
   margin: 0 auto;
 }
 
+footer div div.barra {
+  display: flex;
+  justify-content: right;
+}
+
+footer div div.barra img {
+  margin-top: -30px;
+}
+
 footer div p {
+  color: white;
   padding: 30px 0;
 }
 /*# sourceMappingURL=main.css.map */
