--- a/assets/css/section-info.scss
+++ b/assets/css/section-info.scss
@@ -1,24 +1,50 @@
-section.info {
+section.missao {
     margin-top: 5%;
     background:#2d3e50;
     color: #ffffff;
+    
 
-    div {
-        // width: 80%;
-        // text-align: center;
-        // padding: 30px 0;
-        // margin: 0 auto;
-
+    div.barra {
         img {
             margin-top: -30px;
         }
-
-        div.cards {
-            width: 80%;
-            padding: 30px;
-            display: flex;
-            justify-content: center;
-            margin: 0 auto;
-        }
     }
+
+    h2 {
+        padding: 50px 0;
+    }
+    
+    div.call-to-action {
+        margin: 0 auto;
+        padding-bottom: 50px;
+        width: 60%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+
+        div.title {
+            width: 40%;
+            background: #273a4e;
+            border-radius: 10px;
+
+            div.cards {
+                width: 80%;
+                padding: 10px;
+                display: flex;
+                justify-content: center;
+                margin: 0 auto;
+
+                img {
+                    width: 120px;
+
+                    &.acess {
+                        border-radius: 100%;
+                    }
+                }
+            }
+        }
+
+    }
+    
 }
+
