--- a/assets/css/shared.css
+++ b/assets/css/shared.css
@@ -13,11 +13,21 @@ ul li {
 
 a {
   text-decoration: none;
+  color: #364061;
 }
 
 p, h1, h2, h3, h4 {
   margin: 0;
   text-align: center;
+}
+
+h1, h2, h3, h4 {
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 700i;
+}
+
+p {
+  font-weight: 400;
 }
 
 div.title {
