--- a/assets/css/shared.scss
+++ b/assets/css/shared.scss
@@ -33,11 +33,21 @@ ul {
 
 a {
     text-decoration: none;
+    color: #364061;
 }
 
 p, h1, h2, h3, h4 {
     margin: 0;
     text-align: center;
+}
+
+h1, h2, h3, h4 {
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700i;
+}
+
+p {
+    font-weight: 400;
 }
 
 
