--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -143,7 +143,7 @@ section.missao h2 {
 section.missao div.call-to-action {
   margin: 0 auto;
   padding-bottom: 50px;
-  width: 60%;
+  width: 70%;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -187,14 +187,14 @@ section.carreiras div div.cards {
 
 section.carreiras div div.cards div {
   background-color: beige;
-  width: 30%;
+  width: 18%;
   box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.75);
   padding-bottom: 20px;
 }
 
 section.carreiras div div.cards div:hover {
   box-shadow: 0px 0px 9px 1px blue;
-  width: 33%;
+  width: 20%;
 }
 
 section.carreiras div div.cards div img {
@@ -234,5 +234,34 @@ footer div div.barra img {
 footer div p {
   color: white;
   padding: 30px 0;
+}
+
+section.front-menu {
+  margin-top: 5%;
+  background: #2d3e50;
+  color: #ffffff;
+}
+
+section.front-menu div.barra img {
+  margin-top: -30px;
+}
+
+section.front-menu h2 {
+  padding: 50px 0;
+}
+
+section.front-menu div.cards {
+  margin: 0 auto;
+  padding-bottom: 50px;
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+section.front-menu div.cards div.title {
+  width: 22%;
+  background: #273a4e;
+  border-radius: 10px;
 }
 /*# sourceMappingURL=main.css.map */
