--- a/assets/css/footer.scss
+++ b/assets/css/footer.scss
@@ -5,7 +5,7 @@ footer {
 
         div.barra {
             display: flex;
-            justify-content: right;
+            justify-content: flex-end;
 
             img{
                 margin-top: -30px;
