--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,7 @@ p {
 }
 
 div.title {
-  padding: 30px;
+  padding: 10px;
 }
 
 div.title h2 {
@@ -70,6 +70,12 @@ nav div.barra div img {
   height: 70%;
 }
 
+@media (max-width: 768px) {
+  nav div.barra div img {
+    height: 30px;
+  }
+}
+
 nav div.menu {
   display: flex;
   align-items: center;
@@ -77,12 +83,24 @@ nav div.menu {
   padding: 20px 0;
 }
 
-nav div.menu img {
-  width: 260px;
+nav div.menu img.logo {
+  width: 25%;
+}
+
+@media (max-width: 768px) {
+  nav div.menu img.logo {
+    width: 50%;
+  }
 }
 
 nav div.menu ul {
   display: flex;
+}
+
+@media (max-width: 768px) {
+  nav div.menu ul {
+    display: none;
+  }
 }
 
 nav div.menu ul li {
@@ -96,7 +114,20 @@ nav div.menu ul li a {
 }
 
 nav div.menu ul li a:hover {
-  color: #6C5B7B;
+  color: #dda0bb;
+}
+
+nav div.menu div.menu-hamburguer img {
+  width: 100px;
+  width: 50px;
+  padding: 0 20px;
+  display: none;
+}
+
+@media (max-width: 768px) {
+  nav div.menu div.menu-hamburguer img {
+    display: block;
+  }
 }
 
 header {
@@ -149,10 +180,24 @@ section.missao div.call-to-action {
   align-items: center;
 }
 
+@media (max-width: 768px) {
+  section.missao div.call-to-action {
+    width: 90%;
+    display: block;
+  }
+}
+
 section.missao div.call-to-action div.title {
   width: 40%;
   background: #273a4e;
   border-radius: 10px;
+}
+
+@media (max-width: 768px) {
+  section.missao div.call-to-action div.title {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
 
 section.missao div.call-to-action div.title div.cards {
@@ -180,32 +225,57 @@ section.carreiras div {
   margin: 0 auto;
 }
 
+@media (max-width: 768px) {
+  section.carreiras div {
+    width: 90%;
+  }
+}
+
 section.carreiras div div.cards {
   display: flex;
   justify-content: space-around;
 }
 
+@media (max-width: 768px) {
+  section.carreiras div div.cards {
+    display: block;
+  }
+}
+
 section.carreiras div div.cards div {
   background-color: beige;
-  width: 18%;
+  width: 29%;
   box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.75);
   padding-bottom: 20px;
+  margin: 5px;
+}
+
+@media (max-width: 768px) {
+  section.carreiras div div.cards div {
+    width: 100%;
+  }
 }
 
 section.carreiras div div.cards div:hover {
-  box-shadow: 0px 0px 9px 1px blue;
-  width: 20%;
+  box-shadow: 0px 0px 9px 1px #ffb9d8;
+  width: 32%;
 }
 
-section.carreiras div div.cards div img {
+@media (max-width: 768px) {
+  section.carreiras div div.cards div:hover {
+    width: 100%;
+  }
+}
+
+section.carreiras div div.cards img {
   width: 100%;
 }
 
-section.carreiras div div.cards div h3 {
+section.carreiras div div.cards h3 {
   padding: 10px 0 0;
 }
 
-section.carreiras div div.cards div p {
+section.carreiras div div.cards p {
   padding: 10px 5px;
 }
 
@@ -224,7 +294,7 @@ footer div {
 
 footer div div.barra {
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
 }
 
 footer div div.barra img {
@@ -263,5 +333,10 @@ section.front-menu div.cards div.title {
   width: 22%;
   background: #273a4e;
   border-radius: 10px;
+}
+
+section.front-menu div.cards div.title:hover {
+  box-shadow: 0px 0px 9px 1px #ffffff;
+  width: 25%;
 }
 /*# sourceMappingURL=main.css.map */
