--- a/assets/css/section-carreiras.css
+++ b/assets/css/section-carreiras.css
@@ -7,32 +7,57 @@ section.carreiras div {
   margin: 0 auto;
 }
 
+@media (max-width: 768px) {
+  section.carreiras div {
+    width: 90%;
+  }
+}
+
 section.carreiras div div.cards {
   display: flex;
   justify-content: space-around;
 }
 
+@media (max-width: 768px) {
+  section.carreiras div div.cards {
+    display: block;
+  }
+}
+
 section.carreiras div div.cards div {
   background-color: beige;
-  width: 18%;
+  width: 29%;
   box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.75);
   padding-bottom: 20px;
+  margin: 10px;
+}
+
+@media (max-width: 768px) {
+  section.carreiras div div.cards div {
+    width: 100%;
+  }
 }
 
 section.carreiras div div.cards div:hover {
-  box-shadow: 0px 0px 9px 1px blue;
-  width: 20%;
+  box-shadow: 0px 0px 9px 1px #ffb9d8;
+  width: 32%;
 }
 
-section.carreiras div div.cards div img {
+@media (max-width: 768px) {
+  section.carreiras div div.cards div:hover {
+    width: 100%;
+  }
+}
+
+section.carreiras div div.cards img {
   width: 100%;
 }
 
-section.carreiras div div.cards div h3 {
+section.carreiras div div.cards h3 {
   padding: 10px 0 0;
 }
 
-section.carreiras div div.cards div p {
+section.carreiras div div.cards p {
   padding: 10px 5px;
 }
 
