--- a/assets/css/section-carreiras.scss
+++ b/assets/css/section-carreiras.scss
@@ -4,24 +4,40 @@ section.carreiras {
     div {
         width: 80%;
         margin: 0 auto;
+        @media (max-width: 768px) {
+            width: 90%;
+       }
         
         div.cards {
             display: flex;
             justify-content: space-around;
+            @media (max-width: 768px) {
+                 display: block;
+            }
 
             div {
                 background-color: beige;
-                width: 18%;
+                width:29%;
                 box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.75);
                 padding-bottom: 20px;
+                margin: 10px;
+
+                @media (max-width: 768px) {
+                    width:100%;
+                }
 
                 &:hover {
-                    box-shadow: 0px 0px 9px 1px blue;
-                    width: 20%;
+                    box-shadow: 0px 0px 9px 1px #ffb9d8;
+                    width: 32%;
+
+                    @media (max-width: 768px) {
+                      width: 100%;
+                        }
+                   }
                 }
 
                 img  {
-                    width: 100%
+                    width: 100%;
                 }
                 h3 {
                     padding: 10px 0 0;
@@ -33,7 +49,7 @@ section.carreiras {
             }
         }
     }
-}
+
 
 #exibir-carreira {
     display: none;
