--- a/assets/css/nav.scss
+++ b/assets/css/nav.scss
@@ -17,6 +17,8 @@ nav {
 
                 @media (max-width: 768px) {
                     height: 30px;
+                    margin-top: 23px;
+
                 }
             }
         }
@@ -29,7 +31,7 @@ nav {
         padding: 20px 0;
 
         img.logo {
-            width: 25%;
+            width: 250px;
             @media (max-width: 768px) {
                 width: 50%;
             }
@@ -45,6 +47,10 @@ nav {
             li {
                 margin: 0 20px;
 
+                @media (max-width: 768px) {
+                    padding: 20px;
+                }
+
                 a {
                     font-size: 1.3em;
                     color: #364061;
@@ -57,21 +63,88 @@ nav {
             }
         }
 
-        div.menu-hamburguer {
-
-            img {
-            width: 100px;
-            width: 50px;
-            padding: 0 20px;
+        div.icon-menu {
             display: none;
 
             @media (max-width: 768px) {
                 display: block;
             }
-        }
-        }
-    }
+
+            img.menu-hamburguer {
+                width: 100px;
+                width: 50px;
+                padding: 0 20px;
+                display: none;
     
+                @media (max-width: 768px) {
+                    display: block;
+                }
+            }
+
+        }
+    } 
 }
+
+.dropdown{
+    @media (max-width: 768px) {
+        transition: .7s all;
+        display: block;
+        text-align: center;
+        background: #ffffff;
+    }
+}
+   
+
+//     ul {
+//         display: block;
+
+//         li{
+//             display: block;
+//             padding: 5px;
+//         }
+//     }
+// }
+
+// .show-dropdown {
+//     display: block;
+// }
+
+
+// nav.large{
+// height: 15%;
+// }
+
+// nav.small{
+// height: 10%;
+// }
+
+// .dropdown.dp-smallNav{
+// top: 9vh;
+// transition: .7s all;
+
+// }
+
+// .dropdown.dp-largeNav{
+// top: 13vh;
+// transition: .7s all;
+// }
+
+// @media (max-width: 768px){
+// // Nav--------------------------------
+// nav{
+//     img.logo-nav{
+//         width: 30%;
+//     }
+    
+//     ul {
+//         display: none;
+//     }
+    
+//     img.menu{
+//         display: block;
+//         width: 30px;
+//     }
+// }
+// }
 
 
