--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -12,6 +12,13 @@ footer div div.barra img {
   margin-top: -30px;
 }
 
+@media (max-width: 768px) {
+  footer div div.barra img {
+    height: 30px;
+    margin-top: -16px;
+  }
+}
+
 footer div p {
   color: white;
   padding: 30px 0;
