--- a/assets/css/footer.scss
+++ b/assets/css/footer.scss
@@ -9,6 +9,10 @@ footer {
 
             img{
                 margin-top: -30px;
+                @media (max-width: 768px) {
+                    height: 30px;
+                    margin-top: -16px;
+                }
             }
         }
         p {
