--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -15,6 +15,27 @@ header div#slider div img {
 header div#slider div h3 {
   position: absolute;
   top: 70%;
+  background-color: white;
+  opacity: 0.8;
+  width: 400px;
+  padding: 20px 0;
+}
+
+@media (max-width: 768px) {
+  header div#slider div h3 {
+    width: 300px;
+    padding: 5px 0;
+  }
+}
+
+header div#slider div h3 span {
+  font-size: 1.4em;
+}
+
+@media (max-width: 768px) {
+  header div#slider div h3 span {
+    font-size: 1.1em;
+  }
 }
 
 ul.slick-dots {
