--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -14,6 +14,26 @@ header {
             h3 {
                 position: absolute;
                 top: 70%;
+                background-color: white;
+                opacity: 0.8;
+                width: 400px;
+                padding: 20px 0;
+
+
+                @media (max-width: 768px) {
+                    width: 300px;
+                    padding: 5px 0;
+
+                }
+
+                span {
+                    font-size: 1.4em;
+
+                    @media (max-width: 768px) {
+                        font-size: 1.1em;
+
+                    }
+                }
             }
         }
     }
