--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,6 +73,7 @@ nav div.barra div img {
 @media (max-width: 768px) {
   nav div.barra div img {
     height: 30px;
+    margin-top: 23px;
   }
 }
 
@@ -84,7 +85,7 @@ nav div.menu {
 }
 
 nav div.menu img.logo {
-  width: 25%;
+  width: 250px;
 }
 
 @media (max-width: 768px) {
@@ -107,6 +108,12 @@ nav div.menu ul li {
   margin: 0 20px;
 }
 
+@media (max-width: 768px) {
+  nav div.menu ul li {
+    padding: 20px;
+  }
+}
+
 nav div.menu ul li a {
   font-size: 1.3em;
   color: #364061;
@@ -117,7 +124,17 @@ nav div.menu ul li a:hover {
   color: #dda0bb;
 }
 
-nav div.menu div.menu-hamburguer img {
+nav div.menu div.icon-menu {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  nav div.menu div.icon-menu {
+    display: block;
+  }
+}
+
+nav div.menu div.icon-menu img.menu-hamburguer {
   width: 100px;
   width: 50px;
   padding: 0 20px;
@@ -125,8 +142,17 @@ nav div.menu div.menu-hamburguer img {
 }
 
 @media (max-width: 768px) {
-  nav div.menu div.menu-hamburguer img {
+  nav div.menu div.icon-menu img.menu-hamburguer {
     display: block;
+  }
+}
+
+@media (max-width: 768px) {
+  .dropdown {
+    transition: .7s all;
+    display: block;
+    text-align: center;
+    background: #ffffff;
   }
 }
 
@@ -147,6 +173,27 @@ header div#slider div img {
 header div#slider div h3 {
   position: absolute;
   top: 70%;
+  background-color: white;
+  opacity: 0.8;
+  width: 400px;
+  padding: 20px 0;
+}
+
+@media (max-width: 768px) {
+  header div#slider div h3 {
+    width: 300px;
+    padding: 5px 0;
+  }
+}
+
+header div#slider div h3 span {
+  font-size: 1.4em;
+}
+
+@media (max-width: 768px) {
+  header div#slider div h3 span {
+    font-size: 1.1em;
+  }
 }
 
 ul.slick-dots {
@@ -165,6 +212,12 @@ section.missao {
 
 section.missao div.barra img {
   margin-top: -30px;
+}
+
+@media (max-width: 768px) {
+  section.missao div.barra img {
+    height: 30px;
+  }
 }
 
 section.missao h2 {
@@ -247,7 +300,7 @@ section.carreiras div div.cards div {
   width: 29%;
   box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.75);
   padding-bottom: 20px;
-  margin: 5px;
+  margin: 10px;
 }
 
 @media (max-width: 768px) {
@@ -299,6 +352,13 @@ footer div div.barra {
 
 footer div div.barra img {
   margin-top: -30px;
+}
+
+@media (max-width: 768px) {
+  footer div div.barra img {
+    height: 30px;
+    margin-top: -16px;
+  }
 }
 
 footer div p {
