--- a/assets/css/section-info.scss
+++ b/assets/css/section-info.scss
@@ -7,6 +7,11 @@ section.missao {
     div.barra {
         img {
             margin-top: -30px;
+            @media (max-width: 768px) {
+                height: 30px;
+            }
+
+
         }
     }
 
