--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -23,4 +23,8 @@ footer div p {
   color: white;
   padding: 30px 0;
 }
+
+footer div p a {
+  color: white;
+}
 /*# sourceMappingURL=footer.css.map */
