--- a/assets/css/footer.scss
+++ b/assets/css/footer.scss
@@ -18,6 +18,9 @@ footer {
         p {
             color: white;
             padding: 30px 0;
+            a {
+                color: white;
+            }
         }
     }
 }
