--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -8,6 +8,12 @@ section.front-menu div.barra img {
   margin-top: -30px;
 }
 
+@media (max-width: 768px) {
+  section.front-menu div.barra img {
+    height: 30px;
+  }
+}
+
 section.front-menu h2 {
   padding: 50px 0;
 }
@@ -30,5 +36,50 @@ section.front-menu div.cards div.title {
 section.front-menu div.cards div.title:hover {
   box-shadow: 0px 0px 9px 1px #ffffff;
   width: 25%;
+}
+
+section.items article {
+  box-shadow: 0px 0px 9px 1px gray;
+  width: 70%;
+  margin: 0 auto;
+  padding: 30px;
+}
+
+section.items article h3 {
+  padding: 30px 0 0;
+}
+
+input {
+  display: block;
+  margin: 0 auto;
+  width: 400px;
+  border-radius: 5px;
+  line-height: 2;
+}
+
+textarea {
+  display: block;
+  margin: 0 auto;
+  width: 400px;
+  border-radius: 5px;
+  line-height: 2;
+}
+
+div.cursos {
+  display: flex;
+  justify-content: space-around;
+}
+
+div.cursos div {
+  width: 10%;
+  margin: 10px;
+}
+
+div.cursos div img {
+  width: 100%;
+}
+
+div.cursos div a {
+  font-size: 14px;
 }
 /*# sourceMappingURL=front.css.map */
