--- a/assets/css/front.scss
+++ b/assets/css/front.scss
@@ -3,10 +3,12 @@ section.front-menu {
     background:#2d3e50;
     color: #ffffff;
     
-
     div.barra {
         img {
             margin-top: -30px;
+            @media (max-width: 768px) {
+                height: 30px;
+            }
         }
     }
 
@@ -32,10 +34,54 @@ section.front-menu {
                 width: 25%;
 
             }
-            
+        }
+    }
+}
 
+
+section.items {
+    article {
+        box-shadow: 0px 0px 9px 1px gray;
+        width: 70%;
+        margin: 0 auto;
+        padding: 30px;
+
+        h3 {
+            padding: 30px 0 0;
         }
 
     }
-    
+}
+
+input {
+    display: block;
+    margin: 0 auto;
+    width: 400px;
+    border-radius: 5px;
+    line-height: 2;
+}
+
+textarea {
+    display: block;
+    margin: 0 auto;
+    width: 400px;
+    border-radius: 5px;
+    line-height: 2;
+}
+
+
+div.cursos {
+    display: flex;
+    justify-content: space-around;
+
+    div {
+        width: 10%;
+        margin: 10px;
+        img {
+            width: 100%;
+        }
+        a {
+            font-size: 14px
+        }
+    }
 }
