--- a/assets/css/section-info.css
+++ b/assets/css/section-info.css
@@ -22,9 +22,14 @@ section.missao div.call-to-action {
   margin: 0 auto;
   padding-bottom: 50px;
   width: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 @media (max-width: 768px) {
@@ -50,8 +55,12 @@ section.missao div.call-to-action div.title {
 section.missao div.call-to-action div.title div.cards {
   width: 80%;
   padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: 0 auto;
 }
 
