--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -4,8 +4,12 @@ footer div {
 }
 
 footer div div.barra {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 footer div div.barra img {
