--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -22,9 +22,14 @@ section.front-menu div.cards {
   margin: 0 auto;
   padding-bottom: 50px;
   width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 section.front-menu div.cards div.title {
@@ -34,12 +39,14 @@ section.front-menu div.cards div.title {
 }
 
 section.front-menu div.cards div.title:hover {
-  box-shadow: 0px 0px 9px 1px #ffffff;
+  -webkit-box-shadow: 0px 0px 9px 1px #ffffff;
+          box-shadow: 0px 0px 9px 1px #ffffff;
   width: 25%;
 }
 
 section.items article {
-  box-shadow: 0px 0px 9px 1px gray;
+  -webkit-box-shadow: 0px 0px 9px 1px gray;
+          box-shadow: 0px 0px 9px 1px gray;
   width: 70%;
   margin: 0 auto;
   padding: 30px;
@@ -66,8 +73,11 @@ textarea {
 }
 
 div.cursos {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 div.cursos div {
