--- a/assets/css/section-carreiras.css
+++ b/assets/css/section-carreiras.css
@@ -14,8 +14,11 @@ section.carreiras div {
 }
 
 section.carreiras div div.cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 @media (max-width: 768px) {
@@ -27,7 +30,8 @@ section.carreiras div div.cards {
 section.carreiras div div.cards div {
   background-color: beige;
   width: 29%;
-  box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.75);
   padding-bottom: 20px;
   margin: 10px;
 }
@@ -39,8 +43,9 @@ section.carreiras div div.cards div {
 }
 
 section.carreiras div div.cards div:hover {
-  box-shadow: 0px 0px 9px 1px #ffb9d8;
-  width: 32%;
+  -webkit-box-shadow: 0px 0px 9px 1px #ffb9d8;
+          box-shadow: 0px 0px 9px 1px #ffb9d8;
+  width: 30%;
 }
 
 @media (max-width: 768px) {
